# cli-tools

./: .gitignore  CMakeLists.txt  HELP.md  build.sh  config.toml  cook.sh  generate_docs.sh
src/: CLITools.c  args.c  config.c  error.c  log.c  main.c  markdown.c  print.c  systime.c  toml.c  version.c
src/headers/: CLITools.h  args.h  colors.h  config.h  error.h  log.h  markdown.h  print.h  systime.h  version.h
